@@ -2196,7 +2196,7 @@ if (typeof(window.parent) != 'undefined'
      * @param   array       $row            current row
      *
      * @access  public
-     * @author  Michal Cihar (michal@cihar.com)
+     * @author  Michal Cihar (michal@cihar.com) and others...
      * @return  string      calculated condition
      */
     function PMA_getUniqueCondition($handle, $fields_cnt, $fields_meta, $row)
@@ -2210,7 +2210,7 @@ if (typeof(window.parent) != 'undefined'
             $field_flags = PMA_DBI_field_flags($handle, $i);
             $meta        = $fields_meta[$i];
 
-            // do not use an alias in a condition
+            // do not use a column alias in a condition
             if (! isset($meta->orgname) || ! strlen($meta->orgname)) {
                 $meta->orgname = $meta->name;
 
@@ -2228,6 +2228,10 @@ if (typeof(window.parent) != 'undefined'
                 }
             }
 
+            // do not use a table alias in a condition
+            if ($meta->table != $meta->orgtable) {
+                $meta->table = $meta->orgtable;
+            }
 
             // to fix the bug where float fields (primary or not)
             // can't be matched because of the imprecision of
