@@ -11,6 +11,7 @@ $HeadURL$
 - bug #1722502 DROP TABLE in export VIEW
 - bug #1729027 Sorting results of VIEW browsing
 - bug #1727138 HTML not encoded (more than 1000 characters)
+- bug #1733012 Unwanted table alias in delete button
 
 2.10.2.0 (2007-06-15)
 
